seperated all necessary components

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.2",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
